--- a/.github/workflows/openwrt_x86.yml
+++ b/.github/workflows/openwrt_x86.yml
@@ -27,6 +27,14 @@ on:
         options:
         - "true"
         - "false"
+      debug:
+        description: 'Debug mode'
+        required: true
+        default: 'false'
+        type: choice
+        options:
+        - "true"
+        - "false"
 
 jobs:
 
@@ -145,9 +153,23 @@ jobs:
 
       - name: Build the firmware image
         id: compile
+        if : github.event.inputs.debug == 'false'
         run: |
           cd $BUILD_OPENWRT && echo "$(($(nproc)+1)) thread compile"
-          make prepare
+          make prepare -j$(($(nproc)+1)) 
+          make package/feeds/luci/luci-base/compile V=s
+          make -j$(($(nproc)+1)) world V=s
+          echo "status=success" >> $GITHUB_OUTPUT
+          grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
+          [ -s DEVICE_NAME ] && echo "DEVICE_NAME=$(cat DEVICE_NAME)" >> $GITHUB_ENV
+          echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+
+      - name: Build the firmware image DEBUG
+        id: compile_debug
+        if : github.event.inputs.debug == 'true'
+        run: |
+          cd $BUILD_OPENWRT && echo "DEBUG compile"
+          make prepare -j1
           make package/feeds/luci/luci-base/compile V=s
           make -j1 world V=s
           echo "status=success" >> $GITHUB_OUTPUT
