--- a/.github/workflows/openwrt_x86.yml
+++ b/.github/workflows/openwrt_x86.yml
@@ -35,7 +35,8 @@ on:
         - "true"
         - "false"
   schedule:
-      - cron: '0 0 * * *' # 每天 UTC 时间 00:00 触发
+      - cron: '*/5 * * * *' # 每天 UTC 时间 00:00 触发
+      
 
 jobs:
 
@@ -44,7 +45,6 @@ jobs:
     name: Build OpenWrt firmware
 
     runs-on: ubuntu-24.04
-    if: github.event.repository.owner.id == github.event.sender.id
     permissions: write-all
     env:
       DEPENDENCIES: "build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-setuptools rsync swig unzip zlib1g-dev file wget"
@@ -58,8 +58,19 @@ jobs:
       FIRMWARE: unknown
       Architecture: amd64
     steps:
+      - name: Determine SSH and Debug mode
+        id: vars
+        run: |
+          if [ "${{ github.event_name }}" == "schedule" ]; then
+            echo "SSH=false" >> $GITHUB_ENV
+            echo "DEBUG=false" >> $GITHUB_ENV
+          else
+            echo "SSH=${{ github.event.inputs.ssh }}" >> $GITHUB_ENV
+            echo "DEBUG=${{ github.event.inputs.debug }}" >> $GITHUB_ENV
+          fi
+
       - name: test debug
-        if: github.event.inputs.debug == 'false'
+        if: ${{ env.DEBUG }} == 'false'
         run: |
           echo "debug mode"
       - name: Free Disk Space (Ubuntu)
@@ -180,7 +191,7 @@ jobs:
 
       - name: Build the firmware image
         id: compile
-        if: github.event.inputs.debug == 'false'
+        if: ${{ env.DEBUG }} == 'false'
         run: |
           cd $BUILD_OPENWRT && echo "$(($(nproc)+1)) thread compile"
           make prepare -j$(($(nproc)+1)) 
@@ -193,7 +204,7 @@ jobs:
 
       - name: Build the firmware image DEBUG
         id: compile_debug
-        if: github.event.inputs.debug == 'true'
+        if: ${{ env.DEBUG }} == 'true'
         run: |
           cd $BUILD_OPENWRT && echo "DEBUG compile"
           make prepare -j1
