--- a/feeds.conf
+++ b/feeds.conf
@@ -5,7 +5,7 @@ src-git telephony https://git.openwrt.org/feed/telephony.git
 src-git video https://github.com/openwrt/video.git
 src-git ddnsgo https://github.com/sirpdboy/luci-app-ddns-go.git
 src-git amlogic https://github.com/ophub/luci-app-amlogic.git
-src-git OpenClash https://github.com/vernesong/OpenClash.git
+src-git OpenClash https://github.com/vernesong/OpenClash.git;dev
 #src-git Adguardhome https://github.com/kongfl888/luci-app-adguardhome.git
 #src-git argon https://github.com/jerrykuku/luci-theme-argon.git
 #src-git video https://github.com/openwrt/video.git
