--- a/.github/workflows/openwrt_x86.yml
+++ b/.github/workflows/openwrt_x86.yml
@@ -45,7 +45,7 @@ jobs:
     runs-on: ubuntu-24.04
     permissions: write-all
     env:
-      DEPENDENCIES: "build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-setuptools rsync swig unzip zlib1g-dev file wget"
+      DEPENDENCIES: "antlr3 aria2 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache cmake cpio curl device-tree-compiler fastjar file flex g++ gawk gcc-multilib gettext git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev libreadline-dev libssl-dev libtool lrzsz man-db mkisofs msmtp nano ninja-build p7zip p7zip-full patch pigz pkgconf python3 python3-pip qemu-utils rename rsync scons squashfs-tools subversion swig tar texinfo time uglifyjs unzip upx upx-ucl vim wget xmlto xxd zlib1g-dev zip"
       REPO_BRANCH: main
       BUILD_OPENWRT: ${{ github.workspace }}/openwrt_source_code
       BUILD_ROOT: ${{ github.workspace }}
@@ -100,7 +100,7 @@ jobs:
         run: |
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
           sudo apt-get update && sudo apt-get upgrade
-          sudo apt-get -qq install antlr3 aria2 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool lrzsz mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python3 python3-pip libpython3-dev qemu-utils rsync rename scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev rename pigz libfuse-dev upx subversion subversion g++ zlib1g-dev build-essential git python rsync man-db libncurses5-dev gawk gettext unzip file libssl-dev wget zip time
+          sudo apt-get -qq install ${DEPENDENCIES}
           sudo -E apt-get -qq autoremove --purge
           sudo apt-get -qq clean
           echo "================================================="
