fix fixed rust host build download llvm in ci error

--- a/.github/workflows/openwrt_x86.yml
+++ b/.github/workflows/openwrt_x86.yml
@@ -117,7 +117,7 @@ jobs:
         run: |
           cd $BUILD_ROOT
           echo "test custom.sh"
-          bash custom.sh $ARCHITECTURE $BUILD_ROOT
+          bash custom.sh $ARCHITECTURE $BUILD_ROOT $BUILD_OPENWRT
       
       - name: PULL Openwrt Source Code
         run: |
